@@ -8,3 +8,14 @@ RoninDojo v1.4 Change Log
 - Polished the system-setup script
 - Ipv6 is now disabled during the system-setup script
 - Cleaned up text output, sleep timers, and code spacing to improve readablilty
+
+RoninDojo v1.6 Change Log
+
+- Implemented RoninUI Backend
+- Added user.conf For More Personalization
+- Enhanced Storage Mounting Logic 
+- Enhanced Backup Drive Usage Logic
+- Whirlpool Stat Tool Fix
+- Added Maintainers.txt
+- General Cleanup
+- Minor Bug Fixes
